--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hiragana_test",
   "private": true,
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://JustinPratama.github.io/hiragana_test",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
