--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JustinPratama.github.io/hiragana_test",
+  "homepage": ".",
   "name": "hiragana_test",
   "private": true,
   "version": "0.0.0",
