--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "homepage": ".",
   "name": "hiragana_test",
   "private": true,
+  "homepage": "https://gitname.github.io/react-gh-pages",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.2.0",
